fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 .logo {
   width: 200px;
   height: 60px;
